<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">DaSH Avionics</string>

  <!-- When there's no known value for a metric. -->
  <string name="value_not_available">XXX</string>

  <!-- RPM metric -->
  <string name="rpm">rpm</string>

  <!-- Power metric -->
  <string name="power">W</string>

  <!-- Heart rate metric -->
  <string name="heart_rate">♥</string>

  <!-- Heading metric -->
  <string name="heading">°</string>

  <!-- Speed metric -->
  <string name="speed">km/h</string>

  <!-- Height metric -->
  <string name="height">cm</string>

  <!-- CALIBRATION -->
  <string name="calibration_known_speed">Known speed</string>
  <string name="calibration_calculated_speed">Calculated speed</string>
  <string name="calibration_impeller_rpm">Impeller RPM</string>
  <string name="calibration_immediate_ratio">Instant ratio</string>
  <string name="calibration_5sec_ratio">5-sec average ratio</string>
  <string name="calibration_current_ratio">Used ratio</string>
  <string name="calibration_use_button">Use</string>
  <string name="profile1">Profile 1</string>
  <string name="profile2">Profile 2</string>
  <string name="profile3">Profile 3</string>
  <string name="profile4">Profile 4</string>

  <string name="action_settings">Settings</string>

  <string name="title_activity_pfd">DaSH PFD</string>

  <!-- Settings -->
  <string name="title_activity_aircraft_settings">Aircraft settings</string>

  <string name="settings_cat_mission">Mission settings</string>
  <string name="settings_cat_sensors">Sensor settings</string>

  <string name="settings_pilot_weight">Pilot weight (kg)</string>
  <string name="settings_alert_speed_delta">Speed error to alert at (km/h)</string>
  <string name="settings_no_cruise_speed">"Select an aircraft first</string>
  <string name="settings_target_height">Target height (m)</string>
  <string name="settings_alert_height_delta">Height error to alert at (m)</string>
  <string name="settings_sensor_arduino">Enable Arduino</string>
  <string name="settings_sensor_viiiiva">Enable Viiiiva</string>
  <string name="settings_sensor_disto">Enable Disto</string>
  <string name="settings_sensor_disto_select">Select Disto Sensor</string>
  <string name="settings_sensor_weathermeter">Enable WeatherMeter</string>
  <string name="settings_sensor_weathermeter_select">Select WeatherMeter</string>
  <string name="settings_sensor_kingpost">Enable Kingpost Meter</string>
  <string name="settings_sensor_kingpost_select">Select Kingpost Sensor</string>
  <string name="settings_sensor_antplus">Enable Quarq</string>
  <string name="settings_sensor_gps">Enable GPS</string>
  <string name="settings_sensor_attitude">Enable attitude</string>
  <string name="settings_sensor_fake">Enable fake data</string>

  <string name="settings_key_aircraft_type">aircraft_type</string>
  <string name="settings_key_crank_prop_ratio">crank_to_prop_ratio</string>
  <string name="settings_key_speed_delta">speed_delta</string>
  <string name="settings_key_pilot_weight">pilot_weight</string>
  <string name="settings_key_cruise_speed">cruise_speed</string>
  <string name="settings_key_target_height">height_delta</string>
  <string name="settings_key_rotate_speed">rotate_speed</string>
  <string name="settings_key_height_delta">alert_height_delta</string>
  <string name="settings_key_sensor_arduino">sensors_enable_arduino</string>
  <string name="settings_key_sensor_viiiiva">sensors_enable_viiiiva</string>
  <string name="settings_key_sensor_disto">sensors_enable_disto</string>
  <string name="settings_key_sensor_disto_select">sensors_select_disto</string>
  <string name="settings_key_sensor_weathermeter">sensors_enable_weathermeter</string>
  <string name="settings_key_sensor_weathermeter_select">sensors_select_weathermeter</string>
  <string name="settings_key_sensor_weathermeter_name">sensors_select_weathermeter_name</string>
  <string name="settings_key_sensor_kingpost">sensors_enable_kingpost</string>
  <string name="settings_key_sensor_kingpost_select">sensors_select_kingpost</string>
  <string name="settings_key_sensor_kingpost_name">sensors_select_kingpost_name</string>
  <string name="settings_key_sensor_antplus">sensors_enable_antplus</string>
  <string name="settings_key_sensor_gps">sensors_enable_gps</string>
  <string name="settings_key_sensor_attitude">sensors_enable_attitude</string>
  <string name="settings_key_sensor_udp">sensors_enable_udp</string>
  <string name="settings_key_sensor_fake">sensors_enable_fake</string>
  <string name="settings_key_send_udp">send_udp</string>
  <string name="settings_key_my_ip">my_ip</string>
  <string name="settings_key_send_udp_address">send_udp_address</string>
  <string name="settings_cat_data">Data logging</string>
  <string name="settings_data_dump">Dump logged data to file</string>
  <string name="settings_data_erase">Delete ALL logged data</string>
  <string name="settings_data_erase_summary">Deletes all logged data except dumped files</string>
  <string name="settings_data_dump_summary">Dump all logged data to a file</string>
  <string name="settings_action_erase_data">settings_action_erase_data</string>
  <string name="settings_action_dump_data">settings_action_dump_data</string>
  <string name="dump_failed">Dump failed</string>
  <string name="dump_success">Dump successful</string>
  <string name="dump_progress_title">Data dump in progress</string>
  <string name="dump_progress_message">%d entries written to file</string>
  <string name="delete_success">All database entries have been deleted!</string>
  <string name="settings_crank_prop_ratio">Crank-to-propeller ratio (60:X)</string>
  <string name="settings_sensor_udp">Receive telemetry</string>
  <string name="settings_send_udp">Send telemetry</string>
  <string name="settings_telemetry">Telemetry</string>
  <string name="settings_rotate_speed">Rotate Speed (kph)</string>
  <string name="settings_target_cruise_speed">Target cruise speed (kph)</string>
  <string name="settings_send_udp_address">IP address to send telemetry to</string>
  <string name="settings_my_ip">My IP addresses</string>

  <string-array name="settings_aircraft_type_names">
    <item>V5</item>
    <item>V5 extended wing</item>
    <item>V6 WE / V5 LWE</item>
    <item>V6 long wing extensions</item>
  </string-array>
  <string-array name="settings_aircraft_types">
    <item>V5</item>
    <item>V5_EXTENDED_WINGS</item>
    <item>V6_EXTENDED_WINGS</item>
    <item>V6_LONG_EXTENDED_WINGS</item>
  </string-array>
  <string-array name="empty_sensor_list_names">
    <item>-None-</item>
  </string-array>
  <string-array name="empty_sensor_list">
    <item></item>
  </string-array>
</resources>
