<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <ListPreference
      android:entries="@array/settings_aircraft_type_names"
      android:entryValues="@array/settings_aircraft_types"
      android:key="@string/settings_key_aircraft_type"
      android:title="Aircraft type"/>

  <EditTextPreference
      android:key="@string/settings_key_speed_delta"
      android:numeric="decimal"
      android:title="@string/settings_alert_speed_delta"/>

  <EditTextPreference
      android:key="@string/settings_key_pilot_weight"
      android:numeric="decimal"
      android:title="@string/settings_pilot_weight"/>

  <Preference
      android:key="@string/settings_key_cruise_speed"
      android:persistent="false"
      android:enabled="false"
      android:title="Target cruise speed"/>

  <EditTextPreference
      android:key="@string/settings_key_target_height"
      android:numeric="decimal"
      android:title="@string/settings_target_height"/>
  <EditTextPreference
      android:key="@string/settings_key_height_delta"
      android:numeric="decimal"
      android:title="@string/settings_alert_height_delta"/>


</PreferenceScreen>